syntax = "proto3";

message ImageReconRequest {
    string model = 1;
    string img_path = 2;
}

message Result {
    string delta_time = 1;
    string top_5 = 2;
}

service Flowers {
    rpc flowers(ImageReconRequest) returns (Result) {}
}

service Dogs {
    rpc dogs(ImageReconRequest) returns (Result) {}
}

service Cars {
    rpc cars(ImageReconRequest) returns (Result) {}
}